Prevent wrapping on menu names

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ footer {
     color: rgba(255, 255, 255, 0.5);
     text-decoration: none;
     display: flex;
+    flex-wrap: nowrap;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
